--- a/css/style.css
+++ b/css/style.css
@@ -1,133 +1,105 @@
-/*
-COLORS:
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
 
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
-
-*/
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+html {
+  font-size: 62.5%; }
 
 body {
-    font-family: "lato" ;
-    font-weight: 400;
-    line-height: 1.7;
-    font-size: 16px;
-    color: #777;
-    padding: 30px;
-}
+  font-family: "lato";
+  font-weight: 400;
+  line-height: 1.7;
+  /* font-size: 16px; */
+  color: #777;
+  padding: 3rem;
+  box-sizing: border-box; }
 
-.header{
-    background-image: linear-gradient( to right bottom , #7ed56fbb , #28b485e1) ,
-    url('../img/hero.jpg');
-    background-size: cover;
-    background-position: top;
-    height: 95vh;
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0% 100%);
-}
-.logo-box {
-    position: absolute;
-    top: 60px;
-    left: 60px;
-}
-.logo {
-    height: 35px;
-}
-.header-item {
+.header {
+  background-image: linear-gradient(to right bottom, #7ed56fde, #28b485e1), url("../img/hero.jpg");
+  background-size: cover;
+  background-position: top;
+  height: 95vh;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0% 100%); }
+  .header-item {
     text-transform: uppercase;
     position: absolute;
     top: 40%;
     left: 50%;
-    transform: translate(-50%,-50%);   
-    text-align: center;
-}
-.header-item-primery {
-    color: #ffffff;
-    margin-bottom: 60px;
-   
-}
-.header-item-primery-main {
-display: block;
-font-size: 60px;
-font-weight: 400;
-letter-spacing: 35px;
-animation: MoveInLeft 1s ease-out;
-}
-.header-item-primery-sub {
-    display: block;
-    font-size: 20px;
-    font-weight: 700;
-    letter-spacing: 17.4px;
-    animation: MoveInRight 1s ease-out ;
-}
+    transform: translate(-50%, -50%);
+    text-align: center; }
+    .header-item-primery {
+      color: #ffffff;
+      margin-bottom: 6rem; }
+      .header-item-primery-main {
+        display: block;
+        font-size: 6rem;
+        font-weight: 400;
+        letter-spacing: 3.5rem;
+        animation: MoveInLeft 1s ease-out; }
+      .header-item-primery-sub {
+        display: block;
+        font-size: 2rem;
+        font-weight: 700;
+        letter-spacing: 1.75rem;
+        animation: MoveInRight 1s ease-out; }
 
-.btn:link,
-.btn:visited {
-    text-decoration: none;
-    display: inline-block;
-    padding: 15px 50px;
-    border-radius: 100px;
-    transition: all .1s;
-    
-}
-.btn:hover{
-    transform: translateY(-3px);
-    box-shadow: 0 10px 20px rgba(0,0,0,.2) ; 
-}
-.btn:active{
-    transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba(0,0,0,.2) ; 
-}
+.logo-box {
+  position: absolute;
+  top: 6rem;
+  left: 6rem; }
+
+.logo {
+  height: 3.5rem; }
+
+.btn:link, .btn:visited {
+  text-decoration: none;
+  display: inline-block;
+  padding: 1.5rem 5rem;
+  border-radius: 100px;
+  transition: all .1s;
+  font-size: 1.6rem; }
+
+.btn:hover {
+  transform: translateY(-0.3rem);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.btn:active {
+  transform: translateY(-0.1rem);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+
 .btn-white {
-    background-color: #fff;
-    color: #777;
-    
-}
-.btn-animated{
-    animation: MoveInTop .5s ease-out .75s;
-    animation-fill-mode: backwards;
+  background-color: #ffffff;
+  color: #777; }
 
-}
+.btn-animated {
+  animation: MoveInTop .5s ease-out .75s;
+  animation-fill-mode: backwards; }
+
 @keyframes MoveInLeft {
-0%{
-opacity: 0;
-transform: translateX(-100px);
-}
-80%{
-transform:translateX(10px)
-}
-100%{
-opacity:1;
-transform: translateX(0);
-}
-}
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem); }
+  80% {
+    transform: translateX(1rem); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
 
 @keyframes MoveInRight {
-    0%{
+  0% {
     opacity: 0;
-    transform: translateX(100px);
-    }
-    80%{
-    transform:translateX(-10px)
-    }
-    100%{
-    opacity:1;
-    transform: translateX(0);
-    }
-    }
+    transform: translateX(10rem); }
+  80% {
+    transform: translateX(-1rem); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
 
 @keyframes MoveInTop {
-    0%{
-        opacity: 0;
-        transform: translateY(30px);
-    }
-    100%{
-        opacity: 1;
-        transform: translate(0);
-    }
-}
+  0% {
+    opacity: 0;
+    transform: translateY(3rem); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
