--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,17 +1,17 @@
-@import "sass/absolute/functions";
-@import "sass/absolute/mixins";
-@import "sass/absolute/bariables";
+@import "abstracts/functions";
+@import "abstracts/mixins";
+@import "abstracts/variables";
 
-@import "sass/absolute/animations";
-@import "sass/absolute/base";
-@import "sass/absolute/typography";
-@import "sass/absolute/utilities";
+@import "base/animations";
+@import "base/base";
+@import "base/typography";
+@import "base/utilities";
 
 @import "components/buttons";
 
 @import "layout/header";
 
-@import "sass/absolute/home";
+@import "pages/home";
 
 
 
