completed about and features section

--- a/Nature/sass/main.scss
+++ b/Nature/sass/main.scss
@@ -8,8 +8,11 @@
 @import "base/utilities";
 
 @import "components/buttons";
+@import "components/compostion-image";
+@import "components/features";
 
 @import "layout/header";
+@import "layout/grid";
 
 @import "pages/home";
 
