--- a/Nature/css/style.css
+++ b/Nature/css/style.css
@@ -43,6 +43,43 @@ body {
   padding: 3rem;
   box-sizing: border-box; }
 
+.heading-secondary {
+  font-size: 4rem;
+  text-transform: uppercase;
+  letter-spacing: .2rem;
+  background-image: linear-gradient(to right, #28b485e1, #7ed56fde);
+  display: inline-block;
+  font-weight: 700;
+  text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2);
+  -webkit-background-clip: text;
+  color: transparent;
+  transition: all .2s; }
+  .heading-secondary:hover {
+    transform: skewX(20deg) skewY(2deg) scale(1.1); }
+
+.heading-tertiary {
+  font-size: 2rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 2px; }
+
+.paragraph {
+  font-size: 1.6rem; }
+  .paragraph:not(:last-child) {
+    margin-bottom: 3rem; }
+
+.u-center-text {
+  text-align: center; }
+
+.u-margin-bottom-big {
+  margin-bottom: 8rem; }
+
+.u-margin-bottom-small {
+  margin-bottom: 2rem; }
+
+.u-margin-bottom-medium {
+  margin-bottom: 4rem; }
+
 .btn:link, .btn:visited {
   text-decoration: none;
   display: inline-block;
@@ -66,6 +103,68 @@ body {
 .btn-animated {
   animation: MoveInTop .5s ease-out .75s;
   animation-fill-mode: backwards; }
+
+.btn-text:link, .btn-text:visited {
+  font-size: 1.6rem;
+  color: #55c57a;
+  border-bottom: 1px solid #55c57a;
+  padding: 5px;
+  transition: all .2s;
+  text-decoration: none; }
+
+.btn-text:hover {
+  color: white;
+  background-color: #55c57a;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  transform: translateY(-3px); }
+
+.btn-text:active {
+  transform: translateY(0);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+
+.composition {
+  position: relative; }
+  .composition__photo {
+    position: absolute;
+    width: 55%;
+    border-radius: 2px;
+    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.4);
+    z-index: 2;
+    transition: all .2s;
+    outline-offset: 2rem; }
+    .composition__photo-p1 {
+      top: -2rem;
+      left: 0; }
+    .composition__photo-p2 {
+      top: 2rem;
+      right: 0; }
+    .composition__photo-p3 {
+      top: 10rem;
+      left: 20%; }
+    .composition__photo:hover {
+      outline: 1.5rem solid #55c57a;
+      transform: translateY(-3px) scale(1.05);
+      z-index: 5; }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.9); }
+
+.features {
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 1.5rem;
+  text-align: center;
+  padding: 5rem 2.5rem;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  transition: transform .3s; }
+  .features-icon {
+    font-size: 6rem;
+    margin-bottom: 1rem;
+    display: inline-block;
+    background-image: linear-gradient(to right, #28b485e1, #7ed56fde);
+    -webkit-background-clip: text;
+    color: transparent; }
+  .features:hover {
+    transform: scale(1.03) translateY(-1rem); }
 
 .header {
   background-image: linear-gradient(to right bottom, #7ed56fde, #28b485e1), url("../img/hero.jpg");
@@ -103,3 +202,52 @@ body {
 
 .logo {
   height: 3.5rem; }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+html {
+  font-size: 62.5%; }
+
+[class^="col-"] {
+  float: left; }
+  [class^="col-"]:not(:last-child) {
+    margin-right: 6rem; }
+
+.row {
+  width: 114rem;
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 10rem; }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .row .col-1-of-2 {
+    width: calc((100% - 6rem)/2); }
+  .row .col-1-of-3 {
+    width: calc((100% - ( 2 * 6rem) )/ 3); }
+  .row .col-2-of-3 {
+    width: calc(2 * ((100% - ( 2 * 6rem) )/ 3) + 6rem); }
+  .row .col-1-of-4 {
+    width: calc((100% - ( 3 * 6rem)) / 4); }
+  .row .col-2-of-4 {
+    width: calc(2 * (100% - ( 3 * 6rem)) / 4 + 6rem); }
+  .row .col-3-of-4 {
+    width: calc(3 * (100% - ( 3 * 6rem)) / 4 + (2 * 6rem )); }
+
+.section-about {
+  background-color: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -20vh; }
+
+.section-features {
+  padding: 20rem;
+  background-image: linear-gradient(to right bottom, #7ed56fde, #28b485e1), url("../img/nat-4.jpg");
+  background-size: cover;
+  transform: skewY(-7deg);
+  margin-top: -12rem; }
+  .section-features > * {
+    transform: skewY(7deg); }
