--- a/Nature/sass/abstracts/_variables.scss
+++ b/Nature/sass/abstracts/_variables.scss
@@ -2,4 +2,6 @@ $color-primary: #55c57a;
 $color-primary-light:#28b485e1;
 $color-primary-dark: #7ed56fde;
 $color-gray:#777;
+$color-gray-light-1: #f7f7f7;
 $color-white:#ffffff;
+$color-black:#0000
