--- a/Nature/sass/components/_buttons.scss
+++ b/Nature/sass/components/_buttons.scss
@@ -28,3 +28,25 @@
     
     }
 }
+
+.btn-text {
+    &:link,
+    &:visited {
+            font-size: 1.6rem;
+            color: $color-primary;
+            border-bottom: 1px solid $color-primary;
+            padding: 5px;
+            transition: all .2s;
+            text-decoration: none;
+    }
+    &:hover{
+        color: white;
+        background-color: $color-primary;
+        box-shadow: 0 1rem 2rem rgba($color-black , .2);
+        transform: translateY(-3px);
+    }
+    &:active{
+        transform: translateY(0);
+        box-shadow: 0 .5rem 1rem rgba($color-black , .2);
+    }
+}
