--- a/Nature/css/style.css
+++ b/Nature/css/style.css
@@ -80,6 +80,12 @@ body {
 .u-margin-bottom-medium {
   margin-bottom: 4rem; }
 
+.u-margin-top-big {
+  margin-top: 8rem; }
+
+.u-margin-top-huge {
+  margin-top: 10rem; }
+
 .btn:link, .btn:visited {
   text-decoration: none;
   display: inline-block;
@@ -99,6 +105,10 @@ body {
 .btn-white {
   background-color: #ffffff;
   color: #777; }
+
+.btn-green {
+  background-color: #55c57a;
+  color: #ffffff; }
 
 .btn-animated {
   animation: MoveInTop .5s ease-out .75s;
@@ -165,6 +175,96 @@ body {
     color: transparent; }
   .features:hover {
     transform: scale(1.03) translateY(-1rem); }
+
+.card {
+  position: relative;
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  height: 52rem; }
+  .card__slide {
+    width: 100%;
+    height: 52rem;
+    color: white;
+    font-size: 2rem;
+    transition: all .8s;
+    position: absolute;
+    backface-visibility: hidden;
+    border-radius: 7px;
+    overflow: hidden;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+    .card__slide-front {
+      background-color: #fff; }
+    .card__slide-back {
+      transform: rotateY(180deg); }
+      .card__slide-back-1 {
+        background-image: linear-gradient(to right bottom, #ffb900, #ff7730); }
+      .card__slide-back-2 {
+        background-image: linear-gradient(to right bottom, #28b485e1, #7ed56fde); }
+      .card__slide-back-3 {
+        background-image: linear-gradient(to right bottom, #2998ff, #5643fa); }
+  .card:hover .card__slide-front {
+    transform: rotateY(-180deg); }
+  .card:hover .card__slide-back {
+    transform: rotateY(0); }
+  .card-image {
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: screen;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0% 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0% 100%); }
+    .card-image-1 {
+      background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../img/nat-5.jpg); }
+    .card-image-2 {
+      background-image: linear-gradient(to right bottom, #28b485e1, #7ed56fde), url(../img/nat-6.jpg); }
+    .card-image-3 {
+      background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url(../img/nat-7.jpg); }
+  .card-heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    color: #ffffff;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    width: 75%; }
+  .card-heading-span {
+    padding: 1rem 1.5rem;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone; }
+    .card-heading-span-1 {
+      background-image: linear-gradient(to right bottom, rgba(255, 185, 0, 0.85), rgba(255, 119, 48, 0.85)); }
+    .card-heading-span-2 {
+      background-image: linear-gradient(to right bottom, rgba(40, 180, 133, 0.85), rgba(126, 213, 111, 0.85)); }
+    .card-heading-span-3 {
+      background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.85), rgba(86, 67, 250, 0.85)); }
+  .card-details {
+    padding: 3rem; }
+    .card-details ul {
+      list-style: none;
+      width: 80%;
+      margin: 0 auto; }
+      .card-details ul li {
+        text-align: center;
+        color: #777;
+        font-size: 1.5rem;
+        padding: 1rem; }
+        .card-details ul li:not(:last-child) {
+          border-bottom: 1px solid #eee; }
+  .card-back-price {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 90%; }
+    .card-back-price-only {
+      text-transform: uppercase;
+      font-size: 1.6rem; }
+    .card-back-price-value {
+      font-size: 6rem;
+      margin-bottom: 8rem;
+      font-weight: 100; }
 
 .header {
   background-image: linear-gradient(to right bottom, #7ed56fde, #28b485e1), url("../img/hero.jpg");
@@ -251,3 +351,8 @@ html {
   margin-top: -12rem; }
   .section-features > * {
     transform: skewY(7deg); }
+
+.section-rotate {
+  background-color: #f7f7f7;
+  padding: 25rem 0 15rem 0;
+  margin-top: -12rem; }
