--- a/Nature/sass/abstracts/_variables.scss
+++ b/Nature/sass/abstracts/_variables.scss
@@ -1,7 +1,16 @@
 $color-primary: #55c57a;
 $color-primary-light:#28b485e1;
 $color-primary-dark: #7ed56fde;
+
+$color-secondary-light: #ffb900;
+$color-secondary-dark: #ff7730;
+
+$color-tertiary-light: #2998ff;
+$color-tertiary-dark: #5643fa;
+
 $color-gray:#777;
 $color-gray-light-1: #f7f7f7;
+$color-gray-light-2: #eee;
+
 $color-white:#ffffff;
 $color-black:#0000
