--- a/Nature/sass/base/_utilities.scss
+++ b/Nature/sass/base/_utilities.scss
@@ -6,3 +6,5 @@
 }
 .u-margin-bottom-small{margin-bottom: 2rem;}
 .u-margin-bottom-medium{margin-bottom: 4rem;}
+.u-margin-top-big{margin-top: 8rem;}
+.u-margin-top-huge{margin-top: 10rem;}
