--- a/Nature/sass/main.scss
+++ b/Nature/sass/main.scss
@@ -8,9 +8,10 @@
 @import "base/utilities";
 
 @import "components/buttons";
-@import "components/compostion-image";
+@import "components/compostion-image";  
 @import "components/features";
-
+@import "components/card";
+    
 @import "layout/header";
 @import "layout/grid";
 
