updated nature project with the video section

--- a/Nature/sass/main.scss
+++ b/Nature/sass/main.scss
@@ -7,11 +7,13 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/video";
 @import "components/buttons";
 @import "components/compostion-image";  
 @import "components/features";
 @import "components/card";
-    
+@import "components/story";
+
 @import "layout/header";
 @import "layout/grid";
 
