--- a/Nature/css/style.css
+++ b/Nature/css/style.css
@@ -86,6 +86,20 @@ body {
 .u-margin-top-huge {
   margin-top: 10rem; }
 
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  overflow: hidden;
+  opacity: .11; }
+  .bg-video-content {
+    object-fit: cover;
+    width: 100%;
+    height: 100%; }
+
 .btn:link, .btn:visited {
   text-decoration: none;
   display: inline-block;
@@ -126,7 +140,8 @@ body {
   color: white;
   background-color: #55c57a;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
-  transform: translateY(-3px); }
+  transform: translateY(-3px);
+  padding: 1rem; }
 
 .btn-text:active {
   transform: translateY(0);
@@ -266,6 +281,54 @@ body {
       margin-bottom: 8rem;
       font-weight: 100; }
 
+.story {
+  margin: 0 auto;
+  width: 75%;
+  background-color: rgba(255, 255, 255, 0.6);
+  padding: 6rem;
+  font-size: 1.6rem;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+  padding-left: 9rem;
+  transform: skewX(-12deg); }
+  .story-shape {
+    width: 15rem;
+    height: 15rem;
+    float: left;
+    shape-outside: circle(50% at 50% 50%);
+    -webkit-shape-outside: circle(50% at 50% 50%);
+    transform: translateX(-3rem) skewX(12deg);
+    position: relative; }
+  .story-img {
+    height: 100%;
+    transition: all .7s;
+    width: 100%;
+    backface-visibility: hidden;
+    border-radius: 50%; }
+  .story-text {
+    transform: skewX(12deg); }
+    .story-text h3 {
+      text-transform: uppercase; }
+  .story-caption {
+    position: absolute;
+    color: white;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    text-align: center;
+    font-size: 1.7rem;
+    text-transform: uppercase;
+    opacity: 0;
+    transition: all .7s;
+    backface-visibility: hidden; }
+  .story:hover .story-caption {
+    opacity: 1;
+    transform: translate(-50%, -50%); }
+  .story:hover .story-img {
+    filter: blur(3px); }
+  .story:not(:last-child) {
+    margin-bottom: 10rem; }
+
 .header {
   background-image: linear-gradient(to right bottom, #7ed56fde, #28b485e1), url("../img/hero.jpg");
   background-size: cover;
@@ -356,3 +419,8 @@ html {
   background-color: #f7f7f7;
   padding: 25rem 0 15rem 0;
   margin-top: -12rem; }
+
+.section-story {
+  position: relative;
+  text-align: center;
+  padding: 15rem 0; }
