--- a/Nature/sass/components/_buttons.scss
+++ b/Nature/sass/components/_buttons.scss
@@ -49,6 +49,7 @@
         background-color: $color-primary;
         box-shadow: 0 1rem 2rem rgba($color-black , .2);
         transform: translateY(-3px);
+        padding: 1rem;
     }
     &:active{
         transform: translateY(0);
