bookin section completed radio button pending

--- a/Nature/css/style.css
+++ b/Nature/css/style.css
@@ -329,6 +329,39 @@ body {
   .story:not(:last-child) {
     margin-bottom: 10rem; }
 
+.form-input {
+  font-size: 1.6rem;
+  font-family: inherit;
+  color: rgba(0, 0, 0, 0.7);
+  padding: 1.5rem 2rem;
+  border-radius: 2px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border: none;
+  border-bottom: 3px solid transparent;
+  width: 90%;
+  display: block; }
+  .form-input:focus {
+    outline: none;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+    border-bottom: 3px solid #55c57a; }
+  .form-input:focus:invalid {
+    border-bottom: 3px solid #ff7730; }
+  .form-input::-webkit-input-placeholder {
+    color: #999; }
+
+.form-label {
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-left: 2rem;
+  margin-top: .7rem;
+  display: block;
+  transition: all .3s; }
+
+.form-input:placeholder-shown + .form-label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-4rem); }
+
 .header {
   background-image: linear-gradient(to right bottom, #7ed56fde, #28b485e1), url("../img/hero.jpg");
   background-size: cover;
@@ -424,3 +457,17 @@ html {
   position: relative;
   text-align: center;
   padding: 15rem 0; }
+
+.section-book {
+  padding: 15rem 0;
+  background-image: linear-gradient(to right bottom, #28b485e1, #7ed56fde); }
+
+.book {
+  height: 50rem;
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
+  background-size: 100%;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.25); }
+  .book-form {
+    width: 53%;
+    padding: 6rem; }
