--- a/Nature/sass/abstracts/_variables.scss
+++ b/Nature/sass/abstracts/_variables.scss
@@ -9,6 +9,7 @@ $color-tertiary-light: #2998ff;
 $color-tertiary-dark: #5643fa;
 
 $color-gray:#777;
+$color-gray-2:#999;
 $color-gray-light-1: #f7f7f7;
 $color-gray-light-2: #eee;
 
