--- a/Nature/sass/main.scss
+++ b/Nature/sass/main.scss
@@ -13,6 +13,7 @@
 @import "components/features";
 @import "components/card";
 @import "components/story";
+@import "components/form";
 
 @import "layout/header";
 @import "layout/grid";
