--- a/Nature/css/style.css
+++ b/Nature/css/style.css
@@ -69,22 +69,22 @@ body {
     margin-bottom: 3rem; }
 
 .u-center-text {
-  text-align: center; }
+  text-align: center !important; }
 
 .u-margin-bottom-big {
-  margin-bottom: 8rem; }
+  margin-bottom: 8rem !important; }
 
 .u-margin-bottom-small {
-  margin-bottom: 2rem; }
+  margin-bottom: 2rem !important; }
 
 .u-margin-bottom-medium {
-  margin-bottom: 4rem; }
+  margin-bottom: 4rem !important; }
 
 .u-margin-top-big {
-  margin-top: 8rem; }
+  margin-top: 8rem !important; }
 
 .u-margin-top-huge {
-  margin-top: 10rem; }
+  margin-top: 10rem !important; }
 
 .bg-video {
   position: absolute;
@@ -100,19 +100,22 @@ body {
     width: 100%;
     height: 100%; }
 
-.btn:link, .btn:visited {
+.btn, .btn:link, .btn:visited {
   text-decoration: none;
   display: inline-block;
   padding: 1.5rem 5rem;
   border-radius: 100px;
   transition: all .1s;
-  font-size: 1.6rem; }
+  font-size: 1.6rem;
+  border: none;
+  cursor: pointer; }
 
 .btn:hover {
   transform: translateY(-0.3rem);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
 
-.btn:active {
+.btn:active, .btn :focus {
+  outline: none;
   transform: translateY(-0.1rem);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
 
@@ -329,6 +332,9 @@ body {
   .story:not(:last-child) {
     margin-bottom: 10rem; }
 
+.form-group:not(:last-child) {
+  margin-bottom: 2rem; }
+
 .form-input {
   font-size: 1.6rem;
   font-family: inherit;
@@ -339,7 +345,8 @@ body {
   border: none;
   border-bottom: 3px solid transparent;
   width: 90%;
-  display: block; }
+  display: block;
+  transition: all .5s; }
   .form-input:focus {
     outline: none;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
@@ -361,6 +368,45 @@ body {
   opacity: 0;
   visibility: hidden;
   transform: translateY(-4rem); }
+
+.form-radio-input {
+  display: none; }
+
+.form-radio-group {
+  width: 49%;
+  display: inline-block; }
+
+.form-radio-label {
+  font-size: 1.6rem;
+  position: relative;
+  padding-left: 4.5rem;
+  cursor: pointer; }
+
+.form-radio-button {
+  height: 3rem;
+  width: 3rem;
+  border: 5px solid #55c57a;
+  border-radius: 5rem;
+  display: inline-block;
+  position: absolute;
+  top: -.5rem;
+  left: 0rem; }
+  .form-radio-button::after {
+    content: "";
+    display: block;
+    border-radius: 10rem;
+    width: 1.3rem;
+    height: 1.3rem;
+    background-color: #55c57a;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: all .3s;
+    opacity: 0; }
+
+.form-radio-input:checked ~ .form-radio-label .form-radio-button::after {
+  opacity: 1; }
 
 .header {
   background-image: linear-gradient(to right bottom, #7ed56fde, #28b485e1), url("../img/hero.jpg");
@@ -463,7 +509,6 @@ html {
   background-image: linear-gradient(to right bottom, #28b485e1, #7ed56fde); }
 
 .book {
-  height: 50rem;
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
   background-size: 100%;
   border-radius: 3px;
