--- a/Nature/sass/components/_buttons.scss
+++ b/Nature/sass/components/_buttons.scss
@@ -1,4 +1,5 @@
 .btn{
+    &,
     &:link,
     &:visited {
         text-decoration: none;
@@ -7,13 +8,17 @@
         border-radius: 100px;
         transition: all .1s;
         font-size: 1.6rem;
-        
+        // button property
+        border: none;
+        cursor: pointer;
     }
     &:hover{
         transform: translateY(-.3rem);
         box-shadow: 0 1rem 2rem rgba(0,0,0,.2) ; 
     }
-    &:active{
+    &:active
+    , :focus{
+        outline: none;
         transform: translateY(-.1rem);
         box-shadow: 0 .5rem 1rem rgba(0,0,0,.2) ; 
     }
