--- a/Nature/sass/components/_form.scss
+++ b/Nature/sass/components/_form.scss
@@ -1,4 +1,7 @@
 .form {
+    &-group:not(:last-child){
+        margin-bottom: 2rem;
+    }
     &-input{
         font-size: 1.6rem;
         font-family: inherit;
@@ -10,6 +13,7 @@
         border-bottom: 3px solid transparent;
         width: 90%;
         display: block;
+        transition: all .5s;
 
         &:focus {
             outline: none;
@@ -39,5 +43,46 @@
         opacity: 0;
         visibility: hidden;
         transform: translateY(-4rem);
+    }
+    &-radio-input {
+        display: none;
+    }
+    &-radio-group {
+        width: 49%;
+        display: inline-block;
+    }
+    &-radio-label{
+        font-size: 1.6rem;
+        position: relative;
+        padding-left: 4.5rem;
+        cursor: pointer;
+    }
+    &-radio-button{
+        height: 3rem;
+        width: 3rem;
+        border: 5px solid $color-primary;
+        border-radius: 5rem;
+        display: inline-block;
+        position: absolute;
+        top: -.5rem;
+        left: 0rem;
+        &::after {
+            content: "";
+            display: block;
+            border-radius: 10rem;
+            width: 1.3rem;
+            height: 1.3rem;
+            background-color: $color-primary;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+            transition: all .3s;
+            opacity: 0;
+        }
+
+    }
+    &-radio-input:checked ~ &-radio-label &-radio-button::after {
+    opacity: 1;
     }
 }
