--- a/Nature/sass/pages/_home.scss
+++ b/Nature/sass/pages/_home.scss
@@ -39,3 +39,29 @@
         padding: 6rem;
     }
 }
+
+.section-footer{
+    padding: 5rem 0;
+    background-color: #333;
+    text-align: center;
+    font-size: 1.6rem;
+    // transition: all .2s;
+
+    &-link{
+        &:link,
+        &:visited{
+            color:$color-gray-light-1 ;
+            text-decoration: none;
+            display: inline-block;
+            text-transform: uppercase;
+
+        }
+        &:hover,
+        &:active{
+            color: $color-primary;
+           transform: scale(1.3)rotate(5deg);
+           box-shadow: 0 2rem 4rem rgba($color-black , .4);
+        }
+    }
+   
+}
