--- a/Nature/css/style.css
+++ b/Nature/css/style.css
@@ -480,6 +480,117 @@ html {
   .row .col-3-of-4 {
     width: calc(3 * (100% - ( 3 * 6rem)) / 4 + (2 * 6rem )); }
 
+.navigation-checkbox {
+  display: none; }
+
+.navigation-button {
+  width: 7rem;
+  height: 7rem;
+  position: fixed;
+  border-radius: 50%;
+  top: 6rem;
+  right: 6rem;
+  background-color: #ffffff;
+  z-index: 2000;
+  text-align: center;
+  cursor: pointer;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.3); }
+
+.navigation-background {
+  width: 6rem;
+  height: 6rem;
+  position: fixed;
+  border-radius: 50%;
+  top: 6.5rem;
+  right: 6.5rem;
+  background-image: radial-gradient(#7ed56f, #28b485);
+  z-index: 1000;
+  transition: all .5s; }
+
+.navigation-nav {
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1500;
+  transition: all 0.5s cubic-bezier(0.68, -0.6, 0.32, 1.6);
+  opacity: 0;
+  width: 0; }
+
+.navigation-list {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  width: 100%;
+  list-style: none; }
+
+.navigation-item {
+  margin: 1rem; }
+
+.navigation-link, .navigation-link:link, .navigation-link:visited {
+  display: inline-block;
+  color: white;
+  text-transform: uppercase;
+  font-size: 3rem;
+  text-decoration: none;
+  padding: 1rem 2rem;
+  font-weight: 400;
+  background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #ffffff 50%);
+  background-size: 220%;
+  transition: all .4s; }
+  .navigation-link span, .navigation-link:link span, .navigation-link:visited span {
+    margin-right: 1rem;
+    display: inline-block; }
+
+.navigation-link:hover, .navigation-link:active {
+  background-position: 100%;
+  display: inline-block;
+  color: #55c57a; }
+
+.navigation-checkbox:checked ~ .navigation-background {
+  transform: scale(80); }
+
+.navigation-checkbox:checked ~ .navigation-nav {
+  opacity: 1;
+  width: 100%; }
+
+.navigation-icon {
+  position: relative;
+  margin-top: 3.5rem;
+  transition: all .2s; }
+  .navigation-icon, .navigation-icon::before, .navigation-icon::after {
+    width: 3rem;
+    height: 3px;
+    background-color: #333;
+    display: inline-block; }
+  .navigation-icon::after, .navigation-icon::before {
+    content: "";
+    position: absolute;
+    left: 0; }
+  .navigation-icon::before {
+    top: -.7rem; }
+  .navigation-icon::after {
+    top: .7rem; }
+
+.navigation-button:hover .navigation-icon::before {
+  top: -1rem; }
+
+.navigation-button:hover .navigation-icon::after {
+  top: 1rem; }
+
+.navigation-checkbox:checked + .navigation-button .navigation-icon {
+  background-color: transparent; }
+
+.navigation-checkbox:checked + .navigation-button .navigation-icon::before {
+  top: 0;
+  transform: rotate(-135deg); }
+
+.navigation-checkbox:checked + .navigation-button .navigation-icon::after {
+  top: 0;
+  transform: rotate(135deg); }
+
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0;
