--- a/Nature/css/style.css
+++ b/Nature/css/style.css
@@ -80,6 +80,9 @@ body {
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important; }
 
+.u-margin-bottom-big {
+  margin-bottom: 10rem !important; }
+
 .u-margin-top-big {
   margin-top: 8rem !important; }
 
@@ -332,6 +335,67 @@ body {
   .story:not(:last-child) {
     margin-bottom: 10rem; }
 
+.popup {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  opacity: 0;
+  visibility: hidden; }
+  .popup-content {
+    width: 75%;
+    height: 50rem;
+    background-color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.25);
+    border-radius: 3px;
+    display: table;
+    opacity: 0;
+    transition: all .5s  .2s; }
+  .popup-left {
+    width: 33.33333%;
+    display: table-cell; }
+  .popup-right {
+    width: 66.666667%;
+    display: table-cell;
+    vertical-align: middle;
+    padding: 2rem 3rem; }
+  .popup-img {
+    width: 100%;
+    display: block; }
+  .popup-text {
+    font-size: 1.4rem;
+    column-count: 2;
+    column-gap: 4rem;
+    column-rule: 2px solid #eee;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto; }
+  .popup:target {
+    opacity: 1;
+    visibility: visible; }
+  .popup:target .popup-content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1); }
+  .popup-cancle, .popup-cancle:link, .popup-cancle:visited {
+    position: absolute;
+    top: 2.5rem;
+    right: 2.5rem;
+    line-height: 1;
+    color: #999;
+    display: inline-block;
+    transition: all .2s;
+    text-decoration: none;
+    font-size: 3rem; }
+    .popup-cancle:hover, .popup-cancle:active, .popup-cancle:link:hover, .popup-cancle:link:active, .popup-cancle:visited:hover, .popup-cancle:visited:active {
+      color: #55c57a; }
+
 .form-group:not(:last-child) {
   margin-bottom: 2rem; }
 
@@ -568,7 +632,8 @@ html {
   .navigation-icon::after, .navigation-icon::before {
     content: "";
     position: absolute;
-    left: 0; }
+    left: 0;
+    transition: all .2s; }
   .navigation-icon::before {
     top: -.7rem; }
   .navigation-icon::after {
