--- a/Nature/sass/layout/_navigation.scss
+++ b/Nature/sass/layout/_navigation.scss
@@ -109,13 +109,15 @@
             content: ""; 
             position: absolute;
             left: 0;
+        transition: all .2s;
+
         }
         &::before{top: -.7rem;}
         &::after{top: .7rem;}
     }
     &-button:hover &-icon::before { top : -1rem}
     &-button:hover &-icon::after { top : 1rem}
-    
+
     &-checkbox:checked + &-button &-icon {
         background-color: transparent;
     }
