--- a/Nature/css/style.css
+++ b/Nature/css/style.css
@@ -1,3 +1,17 @@
+/*
+mediaquery manager
+0-600px = phone size
+600-900px = tablate 
+900-1200px = tablate landscape
+1200-1800px = normal desktop 
+1800px+ = big screen
+
+mixin arguments
+phone = 600px
+tab = 900px
+tab-land = 1200px
+big-screen = 1800 min-width
+*/
 @keyframes MoveInLeft {
   0% {
     opacity: 0;
@@ -33,6 +47,15 @@
 
 html {
   font-size: 62.5%; }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
 
 body {
   font-family: "lato";
@@ -42,6 +65,9 @@ body {
   color: #777;
   padding: 3rem;
   box-sizing: border-box; }
+  @media (max-width: 56.25em) {
+    body {
+      padding: 0; } }
 
 .heading-secondary {
   font-size: 4rem;
@@ -52,8 +78,12 @@ body {
   font-weight: 700;
   text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2);
   -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
   transition: all .2s; }
+  @media (max-width: 56.25em) {
+    .heading-secondary {
+      font-size: 3rem; } }
   .heading-secondary:hover {
     transform: skewX(20deg) skewY(2deg) scale(1.1); }
 
@@ -163,15 +193,34 @@ body {
     z-index: 2;
     transition: all .2s;
     outline-offset: 2rem; }
+    @media (max-width: 56.25em) {
+      .composition__photo {
+        position: relative;
+        float: right;
+        width: 33.3333%; } }
     .composition__photo-p1 {
       top: -2rem;
       left: 0; }
+      @media (max-width: 56.25em) {
+        .composition__photo-p1 {
+          top: 2rem;
+          transform: scale(1.2); } }
     .composition__photo-p2 {
       top: 2rem;
       right: 0; }
+      @media (max-width: 56.25em) {
+        .composition__photo-p2 {
+          top: 0;
+          transform: scale(1.3);
+          z-index: 100; } }
     .composition__photo-p3 {
       top: 10rem;
       left: 20%; }
+      @media (max-width: 56.25em) {
+        .composition__photo-p3 {
+          top: 2rem;
+          left: 0rem;
+          transform: scale(1.2); } }
     .composition__photo:hover {
       outline: 1.5rem solid #55c57a;
       transform: translateY(-3px) scale(1.05);
@@ -183,7 +232,7 @@ body {
   background-color: rgba(255, 255, 255, 0.8);
   font-size: 1.5rem;
   text-align: center;
-  padding: 5rem 2.5rem;
+  padding: 5rem 5rem;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: transform .3s; }
@@ -297,6 +346,18 @@ body {
   border-radius: 3px;
   padding-left: 9rem;
   transform: skewX(-12deg); }
+  @media (max-width: 56.25em) {
+    .story {
+      padding: 4rem;
+      padding-left: 7rem;
+      width: 100%;
+      font-size: 1.4rem; } }
+  @media (max-width: 37.5em) {
+    .story {
+      padding: 4rem;
+      padding-left: 7rem;
+      width: 100%;
+      transform: skewX(0); } }
   .story-shape {
     width: 15rem;
     height: 15rem;
@@ -305,6 +366,9 @@ body {
     -webkit-shape-outside: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
     position: relative; }
+    @media (max-width: 37.5em) {
+      .story-shape {
+        transform: translateX(-3rem) skewX(0); } }
   .story-img {
     height: 100%;
     transition: all .7s;
@@ -315,6 +379,9 @@ body {
     transform: skewX(12deg); }
     .story-text h3 {
       text-transform: uppercase; }
+    @media (max-width: 37.5em) {
+      .story-text {
+        transform: skewX(0); } }
   .story-caption {
     position: absolute;
     color: white;
@@ -398,6 +465,9 @@ body {
 
 .form-group:not(:last-child) {
   margin-bottom: 2rem; }
+  @media (max-width: 37.5em) {
+    .form-group:not(:last-child) {
+      margin-bottom: 1rem; } }
 
 .form-input {
   font-size: 1.6rem;
@@ -411,6 +481,9 @@ body {
   width: 90%;
   display: block;
   transition: all .5s; }
+  @media (max-width: 37.5em) {
+    .form-input {
+      width: 100%; } }
   .form-input:focus {
     outline: none;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
@@ -439,6 +512,10 @@ body {
 .form-radio-group {
   width: 49%;
   display: inline-block; }
+  @media (max-width: 37.5em) {
+    .form-radio-group {
+      width: 100%;
+      margin-bottom: 2rem; } }
 
 .form-radio-label {
   font-size: 1.6rem;
@@ -477,7 +554,12 @@ body {
   background-size: cover;
   background-position: top;
   height: 95vh;
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0% 100%); }
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0% 100%);
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0% 100%); }
+  @media (max-width: 37.5em) {
+    .header {
+      clip-path: polygon(0 0, 100% 0, 100% 85vh, 0% 100%);
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0% 100%); } }
   .header-item {
     text-transform: uppercase;
     position: absolute;
@@ -494,12 +576,20 @@ body {
         font-weight: 400;
         letter-spacing: 3.5rem;
         animation: MoveInLeft 1s ease-out; }
+        @media (max-width: 37.5em) {
+          .header-item-primery-main {
+            font-size: 4rem;
+            letter-spacing: 2.5rem; } }
       .header-item-primery-sub {
         display: block;
         font-size: 2rem;
         font-weight: 700;
         letter-spacing: 1.75rem;
         animation: MoveInRight 1s ease-out; }
+        @media (max-width: 37.5em) {
+          .header-item-primery-sub {
+            font-size: 1.5rem;
+            letter-spacing: 1rem; } }
 
 .logo-box {
   position: absolute;
@@ -517,16 +607,29 @@ body {
 html {
   font-size: 62.5%; }
 
-[class^="col-"] {
-  float: left; }
-  [class^="col-"]:not(:last-child) {
-    margin-right: 6rem; }
-
 .row {
-  width: 114rem;
+  max-width: 114rem;
   margin: 0 auto; }
+  @media (max-width: 56.25em) {
+    .row {
+      max-width: 50rem;
+      padding: 0 3rem; } }
   .row:not(:last-child) {
     margin-bottom: 10rem; }
+    @media (max-width: 56.25em) {
+      .row:not(:last-child) {
+        margin-bottom: 6rem; } }
+  .row [class^="col-"] {
+    float: left; }
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 6rem; }
+      @media (max-width: 56.25em) {
+        .row [class^="col-"]:not(:last-child) {
+          margin-right: 0;
+          margin-bottom: 6rem; } }
+    @media (max-width: 56.25em) {
+      .row [class^="col-"] {
+        width: 100% !important; } }
   .row::after {
     content: "";
     display: table;
@@ -559,6 +662,14 @@ html {
   text-align: center;
   cursor: pointer;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.3); }
+  @media (max-width: 56.25em) {
+    .navigation-button {
+      top: 4rem;
+      right: 4rem; } }
+  @media (max-width: 56.25em) {
+    .navigation-button {
+      top: 4rem;
+      right: 4rem; } }
 
 .navigation-background {
   width: 6rem;
@@ -567,9 +678,17 @@ html {
   border-radius: 50%;
   top: 6.5rem;
   right: 6.5rem;
-  background-image: radial-gradient(#7ed56f, #28b485);
+  background-image: radial-gradient(#4ed56f, #28b485);
   z-index: 1000;
   transition: all .5s; }
+  @media (max-width: 56.25em) {
+    .navigation-background {
+      top: 4.5rem;
+      right: 4.5rem; } }
+  @media (max-width: 37.5em) {
+    .navigation-background {
+      top: 4.3rem;
+      right: 4.3rem; } }
 
 .navigation-nav {
   height: 100vh;
@@ -660,38 +779,69 @@ html {
   background-color: #f7f7f7;
   padding: 25rem 0;
   margin-top: -20vh; }
+  @media (max-width: 56.25em) {
+    .section-about {
+      padding: 23rem 0; } }
 
 .section-features {
-  padding: 20rem;
+  padding: 20rem 0rem;
   background-image: linear-gradient(to right bottom, #7ed56fde, #28b485e1), url("../img/nat-4.jpg");
   background-size: cover;
   transform: skewY(-7deg);
   margin-top: -12rem; }
   .section-features > * {
     transform: skewY(7deg); }
+  @media (max-width: 56.25em) {
+    .section-features {
+      padding: 15rem 0; } }
 
 .section-rotate {
   background-color: #f7f7f7;
   padding: 25rem 0 15rem 0;
   margin-top: -12rem; }
+  @media (max-width: 56.25em) {
+    .section-rotate {
+      padding: 20rem 0 10rem 0; } }
 
 .section-story {
   position: relative;
   text-align: center;
   padding: 15rem 0; }
+  @media (max-width: 56.25em) {
+    .section-story {
+      padding: 10rem 0; } }
 
 .section-book {
   padding: 15rem 0;
   background-image: linear-gradient(to right bottom, #28b485e1, #7ed56fde); }
+  @media (max-width: 56.25em) {
+    .section-book {
+      padding: 10rem 0; } }
 
 .book {
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
   background-size: 100%;
   border-radius: 3px;
-  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.25); }
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.25);
+  height: auto; }
+  @media (max-width: 75em) {
+    .book {
+      background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 65%, transparent 65%), url(../img/nat-10.jpg);
+      background-size: cover; } }
+  @media (max-width: 75em) {
+    .book {
+      background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url(../img/nat-10.jpg);
+      background-size: cover; } }
   .book-form {
     width: 53%;
     padding: 6rem; }
+    @media (max-width: 75em) {
+      .book-form {
+        width: 70%; } }
+    @media (max-width: 56.25em) {
+      .book-form {
+        width: 100%;
+        padding: 3rem; } }
 
 .section-footer {
   padding: 5rem 0;
