--- a/Nature/sass/base/_base.scss
+++ b/Nature/sass/base/_base.scss
@@ -4,7 +4,21 @@
     box-sizing: inherit;
 }
 html {
-    font-size: 62.5%;
+    // this defines what 1rem is 
+    font-size: 62.5%; // 1rem = 16px ; 10px/16px = 62.5%
+    @include respond(big-screen){
+        font-size: 75%; //1rem = 12px ; 12/16 = 75% 
+    }
+
+    @include respond(tab-land){
+        font-size: 56.25%; // 1rem = 9px ; 9/16 = 56.25%
+    }
+    @include respond(tab){
+        font-size: 50%; // 1rem = 8px ; 8/16 = 50%
+    }
+    // @include respond(phone){
+    //     font-size: 60%;
+    // }
     
 }
 body {
@@ -15,4 +29,7 @@ body {
     color: $color-gray;
     padding: 3rem;
     box-sizing: border-box;
+    @include respond(tab) {
+        padding: 0;
+    }
 }
