--- a/Nature/sass/base/_typography.scss
+++ b/Nature/sass/base/_typography.scss
@@ -7,8 +7,12 @@
     font-weight: 700;
     text-shadow: .5rem 1rem 2rem rgba($color-black , .2);
     -webkit-background-clip: text;
+    background-clip: text;
     color: transparent;
     transition: all .2s ;
+    @include respond(tab){
+        font-size: 3rem;
+    }
 &:hover{
     transform: skewX(20deg) skewY(2deg) scale(1.1);
 }
