--- a/Nature/sass/components/_compostion-image.scss
+++ b/Nature/sass/components/_compostion-image.scss
@@ -11,17 +11,41 @@ position: relative;
         transition: all .2s;
         outline-offset: 2rem;
 
+        @include respond(tab){
+            position: relative;
+            float: right;
+            width: 33.3333%;
+
+        }
+
     &-p1 {
         top: -2rem;
         left: 0;
+        @include respond(tab){
+            top: 2rem;
+            transform: scale(1.2);
+        }
     }
     &-p2 {
         top: 2rem;
         right: 0;
+        @include respond(tab){
+            top: 0;
+            transform: scale(1.3);
+            z-index: 100;
+
+        }
     }
     &-p3 {
         top: 10rem;
         left: 20%;
+        @include respond(tab){
+            top: 2rem;
+            left: 0rem;
+            transform: scale(1.2);
+            
+
+        }
     }
         &:hover{
             outline:  1.5rem solid $color-primary;
