--- a/Nature/sass/components/_form.scss
+++ b/Nature/sass/components/_form.scss
@@ -1,6 +1,10 @@
 .form {
     &-group:not(:last-child){
         margin-bottom: 2rem;
+        @include respond(phone){
+            margin-bottom: 1rem;
+          
+        }
     }
     &-input{
         font-size: 1.6rem;
@@ -14,6 +18,11 @@
         width: 90%;
         display: block;
         transition: all .5s;
+
+        @include respond(phone){
+            width: 100%;
+          
+        }
 
         &:focus {
             outline: none;
@@ -50,6 +59,10 @@
     &-radio-group {
         width: 49%;
         display: inline-block;
+        @include respond(phone){
+            width: 100%;
+            margin-bottom: 2rem;
+        }
     }
     &-radio-label{
         font-size: 1.6rem;
