--- a/Nature/sass/components/_story.scss
+++ b/Nature/sass/components/_story.scss
@@ -8,7 +8,19 @@
     border-radius: 3px;
     padding-left: 9rem;
     transform: skewX(-12deg);
-    
+    @include respond(tab){
+        padding: 4rem;
+        padding-left: 7rem;
+        width: 100%;
+        font-size: 1.4rem;
+        
+    }
+    @include respond(phone){
+        padding: 4rem;
+        padding-left: 7rem;
+        width: 100%;
+        transform: skewX(0);
+    }
     &-shape {
     width: 15rem;
     height: 15rem;
@@ -17,6 +29,9 @@
     -webkit-shape-outside: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
     position: relative;
+    @include respond(phone){
+        transform: translateX(-3rem) skewX(0);
+    }
     }
     &-img{
     height: 100%;
@@ -30,6 +45,9 @@
             text-transform: uppercase;
         };
      transform: skewX(12deg);   
+     @include respond(phone){
+        transform:  skewX(0);
+    }
     }
     &-caption{
         position: absolute;
