--- a/Nature/sass/layout/grid.scss
+++ b/Nature/sass/layout/grid.scss
@@ -12,12 +12,7 @@ $width-horizontal: 6rem;
 $width-vertial:10rem;
 $element-height: 3rem;
 
-[class^="col-"] { // here ^ refers to the starting  and $ referst to the ending * and this referst to the include any where
-    float: left;
-    &:not(:last-child){
-        margin-right: $width-horizontal;
-    }
-}
+
 
 @mixin clearfix {
     &::after{
@@ -27,10 +22,30 @@ $element-height: 3rem;
     }
 }
 .row{
-    width: $max-width;
+    max-width: $max-width;
     margin: 0 auto;
+    @include respond(tab) {
+        max-width: 50rem;
+        padding: 0 3rem;
+    }
     &:not(:last-child){
         margin-bottom: $width-vertial;
+        @include respond(tab){
+            margin-bottom: 6rem
+        }
+    }
+    [class^="col-"] { // here ^ refers to the starting  and $ referst to the ending * and this referst to the include any where
+        float: left;
+        &:not(:last-child){
+            margin-right: $width-horizontal;
+            @include respond(tab){
+                margin-right:0;
+                margin-bottom:6rem
+            }
+        }
+        @include respond(tab){
+            width: 100% !important;
+        }
     }
     @include clearfix;
     .col-1-of-2{
