--- a/Nature/sass/pages/_home.scss
+++ b/Nature/sass/pages/_home.scss
@@ -2,9 +2,12 @@
     background-color: $color-gray-light-1;
     padding: 25rem 0 ;
     margin-top: -20vh;
+    @include respond(tab){
+        padding: 23rem 0;
+    }
 }
 .section-features {
-    padding: 20rem;
+    padding: 20rem 0rem;
     background-image: linear-gradient( to right bottom , $color-primary-dark , $color-primary-light) ,
     url('../img/nat-4.jpg');
     background-size: cover;
@@ -13,20 +16,32 @@
     & > * {
         transform: skewY(7deg);
     }
+    @include respond(tab){
+        padding: 15rem 0;
+    }
 }
 .section-rotate{
     background-color: $color-gray-light-1;
     padding: 25rem 0 15rem 0;
     margin-top: -12rem;
+    @include respond(tab){
+        padding: 20rem 0 10rem 0
+    }
 }
 .section-story{
     position: relative;
     text-align: center;
     padding: 15rem 0;
+    @include respond(tab){
+        padding: 10rem 0;
+    }
 }
 .section-book {
     padding: 15rem 0;
     background-image: linear-gradient(to right bottom , $color-primary-light , $color-primary-dark);
+    @include respond(tab){
+        padding: 10rem 0;
+    }
 }
 .book{
     // height: 50rem;
@@ -34,10 +49,28 @@
     background-size: 100%;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black , .25);
+    height: auto;
+
+    @include respond(tab-land){
+    background-image: linear-gradient(105deg , rgba($color-white , .9)0% , rgba($color-white , .9 ) 65%  , transparent 65% ) ,url(../img/nat-10.jpg);
+    background-size: cover;
+    }
+    @include respond(tab-land){
+        background-image: linear-gradient(to right , rgba($color-white , .9)0% , rgba($color-white , .9 ) 100%  ) ,url(../img/nat-10.jpg);
+        background-size: cover;
+    }
     &-form {
         width: 53%;
         padding: 6rem;
+        @include respond(tab-land){
+            width: 70%;
+        }
+        @include respond(tab){
+            width: 100%;
+            padding: 3rem;
+        }
     }
+
 }
 
 .section-footer{
